# tensorflow-benchmark

./: .gitmodules  README.md
tensorflow-benchmark/: .gitmodules  CMakeLists.txt  main.cpp
tensorflow-benchmark/bench/: CMakeLists.txt  bench.cpp  graph_runner.h
tensorflow-benchmark/graph/: frozen_model.pb
